[tool.poetry]
name = "cloud-native-ml-platform"
version = "0.1.0"
description = "Cloud-Native Advanced ML Platform with multi-modal capabilities using Google Vertex AI AutoML"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ml_platform"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-aiplatform = "^1.34.0"
google-cloud-storage = "^2.10.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
requests = "^2.31.0"
fastapi = "^0.103.0"
uvicorn = "^0.23.0"
pydantic = "^2.4.0"
python-multipart = "^0.0.6"
pillow = "^10.0.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
